# salt

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  INSTALL.md  Makefile.am  README.md  SECURITY.md  TESTING.md  bootstrap  configure.ac  nfpm.yaml
.github/: codeql-config.yml  codeql-suppressions.md  copilot-instructions.md  dependabot.yml
.github/agents/: bash-script-expert.agent.md  cicd-pipeline-architect.agent.md  clang-c-expert.agent.md  cli-ux-designer.agent.md  cmocka-testing-expert.agent.md  codeql-c-expert.agent.md  copilot-config-expert.agent.md  dependency-pinning-expert.agent.md  design-threat-model-expert.agent.md  devops-expert.agent.md  e2e-qa-engineer.agent.md  fuzzing-expert.agent.md  gcc-c-expert.agent.md  gnu-autotools-expert.agent.md  implementation-secure-c-expert.agent.md  libsodium-expert.agent.md  libsodium-vuln-response-expert.agent.md  principal-software-engineer.agent.md  prompt-engineer.agent.md  release-automation-expert.agent.md  release-signing-attestation-expert.agent.md  repo-architect.agent.md  sbom-expert.agent.md  se-technical-writer.agent.md  valgrind-expert.agent.md  vhs-expert.agent.md
.github/codeql/: IMPLEMENTATION.md  decoded-key-not-freed.ql  libsodium-sealed-box-misuse.ql  plaintext-length-not-validated.ql  qlpack.yml  salt-custom-queries.yml  sensitive-buffer-not-locked.ql
.github/copilot-pack/: ADOPTION_CHECKLIST.md  AGENT_REVIEW_APPENDICES.md  MANIFEST.md  OVERLAYS.md  README.md  VARIABLES.md
.github/copilot-pack/scripts/: validate-pack.sh
.github/instructions/: actionlint.instructions.md  agentsmd.instructions.md  audit-to-plan.instructions.md  build-process.instructions.md  c-memory-safety.instructions.md  changelog.instructions.md  ci.instructions.md  cmocka-testing.instructions.md  code-smells.instructions.md  codeql-findings.instructions.md  contributing.instructions.md  copilot-customization.instructions.md  dependency-pinning.instructions.md  design-weakness-review.instructions.md  fuzz-review.instructions.md  github-secrets-integration.instructions.md  gnu-autotools.instructions.md  implementation-weakness-guards.instructions.md  libsodium-lowlevel-vuln-guards.instructions.md  libsodium-patterns.instructions.md  makefile.instructions.md  readme.instructions.md  sbom.instructions.md  security.instructions.md  vhs-tape.instructions.md
.github/prompts/: audit-code-smells.prompt.md  cmocka-test-scaffold.prompt.md  copilot-config-review.prompt.md  release-readiness.prompt.md  sealed-box-design-review.prompt.md  security-review.prompt.md  vhs-tape-review.prompt.md
.github/schemas/: audit-report.schema.json
.github/skills/audit-c-memory-safety/: SKILL.md
.github/skills/audit-code-smells/: SKILL.md
.github/skills/audit-design-weaknesses/: SKILL.md
.github/skills/audit-gnu-autotools/: SKILL.md
.github/skills/audit-implementation-weaknesses/: SKILL.md
.github/skills/audit-libsodium-lowlevel-safety/: SKILL.md
.github/skills/audit-sbom/: SKILL.md
.github/skills/audit-syft/: SKILL.md
.github/skills/create-agentsmd/: SKILL.md
.github/skills/create-changelogmd/: SKILL.md
.github/skills/create-copilot-instructions/: SKILL.md
.github/skills/create-makefile/: SKILL.md
.github/skills/create-readmemd/: SKILL.md
.github/skills/create-vhs-tape/: SKILL.md
.github/skills/generate-cmocka-tests/: SKILL.md
.github/skills/generate-sbom/: SKILL.md
.github/skills/github-secrets-workflow/: SKILL.md
.github/skills/run-actionlint/: SKILL.md
.github/skills/setup-sealed-box-scaffolding/: SKILL.md
.github/skills/slack-mrkdwn-formatter/: SKILL.md
.github/skills/update-agent-models/: SKILL.md
.github/skills/update-ci-skill/: SKILL.md
.github/skills/update-contributing-skill/: SKILL.md
.github/skills/update-dependency-pins/: SKILL.md
.github/skills/update-gnu-build-system/: SKILL.md
.github/skills/update-security-skill/: SKILL.md
.github/skills/update-syft/: SKILL.md
.github/skills/validate-copilot-config/: SKILL.md
.github/workflows/: ci.yml  codeql.yml  compiler-matrix.yml  release.yml
assets/coverage/: solarized-dark.css  solarized-light.css
bench/: baseline.json  bench_base64.c  bench_cases.h  bench_common.c  bench_common.h  bench_main.c  bench_output.c  bench_parse.c  bench_seal.c  bench_spawn.c
docker/ubuntu/20/: Dockerfile
docker/ubuntu/22/: Dockerfile
docker/ubuntu/24/: Dockerfile
docs/: libsodium-usage-inventory.md  lint-suppressions.md  sbom-parlay-enrichment.md  ubuntu-packages.md
examples/: set-environment-secret.sh  set-org-secret.sh  set-repo-secret.sh
fuzz/: fuzz_boundary.c  fuzz_cli.c  fuzz_common.h  fuzz_output.c  fuzz_parse.c  fuzz_roundtrip.c
fuzz/dictionaries/: boundary.dict  cli.dict  output.dict  parse.dict  roundtrip.dict
include/: salt.h  salt_cli_internal.h
include/cli/: internal.h
m4/: .gitkeep
man/: salt.1
scripts/: add-libsodium-to-sbom.sh  add-ubuntu-provenance-to-sbom.sh  bench-compare.sh  build-deb-package.sh  check-ci-runner.sh  ci-runner-ubuntu22-ansible.yml  collect-ubuntu-deps.sh  fuzz.sh  gcov_blocks.py  install-ci-runner.sh  qa.sh  sbom-runtime.sh  validate-copilot-config.sh  validate-lint-suppressions.sh  validate-sbom.sh  verify-roundtrip-helper.c
src/: cli_args.c  cli_args.h  cli_input.c  cli_input.h  cli_output.c  cli_output.h  cli_parse.c  cli_prepare.c  cli_prepare.h  cli_signal.c  cli_state.c  cli_state.h  cli_stream.c  cli_stream.h  cli_test_hooks.c  cli_test_hooks.h  main.c  salt.c  salt_test_internal.h
src/cli/: args.c  args.h  input.c  input.h  internal.h  output.c  parse.c  prepare.c  prepare.h  signal.c  signals.h  state.c  state.h  stream.c  test_hooks.c  test_hooks.h
tests/: test_cli_characterization.c  test_cli_contract.c  test_cli_helpers.c  test_cli_io.c  test_cli_json.c  test_cli_runtime.c  test_cli_support.c  test_fuzz_regressions.c  test_main.c  test_salt.c  test_suites.h
tests/cli/: test_characterization.c  test_contract.c  test_helpers.c  test_io.c  test_json.c  test_runtime.c  test_shared.h  test_support.c
vhs/: salt.tape
(+12 files in other folders)
